feature #1: created specifications of home (put, get, post and delete) and implemented the home controller with an example.
