# src/main/java/iot/home/service/iotrest/controllers/HomeApi.java
@@ -1,62 +1,0 @@
-/**
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.2.1).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-package iot.home.service.iotrest.controllers;
-
-import iot.home.service.iotrest.entities.Home;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.Parameters;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import io.swagger.v3.oas.annotations.tags.Tag;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.context.request.NativeWebRequest;
-import org.springframework.web.multipart.MultipartFile;
-
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.*;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import jakarta.annotation.Generated;
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen")
-@Validated
-@Tag(name = "home", description = "the home API")
-public interface HomeApi {
-
-    /**
-     * GET /home/{home-id}
-     * Returns a list of homes for the specified id
-     *
-     * @param homeId  (required)
-     * @return Returned a list of homes (status code 200)
-     */
-    @Operation(
-        operationId = "getListOfHomesById",
-        tags = { "Home" },
-        responses = {
-            @ApiResponse(responseCode = "200", description = "Returned a list of homes", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = Home.class))
-            })
-        }
-    )
-    @RequestMapping(
-        method = RequestMethod.GET,
-        value = "/home/{home-id}",
-        produces = { "application/json" }
-    )
-    ResponseEntity<List<Home>> getListOfHomesById(
-        @Parameter(name = "home-id", description = "", required = true) @PathVariable("home-id") String homeId
-    );
-
-}
